Upgraded to Spring Boot 3.1.6, also cleaned up JUnit tests (no more public classes/methods) and replaced String.format with .formatted.