@@ -11,11 +11,11 @@ public class ConsoleCard {
     public static String display(Card card) {
         String[] lines = new String[7];
         lines[0] = "┌─────────┐";
-        lines[1] = String.format("│%s%s       │", card.rank().display(), card.rank() == Rank.TEN ? "" : " ");
+        lines[1] = "│%s%s       │".formatted(card.rank().display(), card.rank() == Rank.TEN ? "" : " ");
         lines[2] = "│         │";
-        lines[3] = String.format("│    %s    │", card.suit().displaySymbol());
+        lines[3] = "│    %s    │".formatted(card.suit().displaySymbol());
         lines[4] = "│         │";
-        lines[5] = String.format("│       %s%s│", card.rank() == Rank.TEN ? "" : " ", card.rank().display());
+        lines[5] = "│       %s%s│".formatted(card.rank() == Rank.TEN ? "" : " ", card.rank().display());
         lines[6] = "└─────────┘";
 
         Ansi.Color cardColor = card.suit().isRed() ? Ansi.Color.RED : Ansi.Color.BLACK;
